objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Contact.Account.Owner.FirstName + &quot; &quot; + Contact.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_sent_date__c</fullName>
        <label>Actual sent date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LKP to Answer</description>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Distributor__c</fullName>
        <description>The Assigned Distributor for the associated Lead/Contact</description>
        <formula>IF ( NOT ( ISBLANK ( ContactId ) ),
 TEXT(Contact.Assigned_Distributor__c)  ,
 TEXT(Lead.Communities_Distributor__c)  )</formula>
        <inlineHelpText>The Assigned Distributor for the associated Lead/Contact</inlineHelpText>
        <label>Assigned Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Reporting__c</fullName>
        <label>Campaign Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Survey_Cycle__c</fullName>
        <label>Campaign Survey Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_start_date__c</fullName>
        <description>This formula allows to have the campaign start date as a field on Campaign Member.</description>
        <formula>Campaign.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Exposes company name for custom reports</description>
        <formula>CompanyOrAccount</formula>
        <inlineHelpText>Exposes company name for custom reports</inlineHelpText>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Industry__c</fullName>
        <formula>Contact.Account.Customer_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Industry from contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Industry_from_Lead_form__c</fullName>
        <formula>CASE(
TEXT(Lead.Industry),&quot;Automation &amp; Control&quot;, &quot;Industrial&quot;, &quot;Alternative Energy&quot;, &quot;Industrial&quot;, &quot;HVAC&quot;, &quot;Industrial&quot;, &quot;Industrial Machinery&quot;, &quot;Industrial&quot;, &quot;Lighting&quot;, &quot;Industrial&quot;, &quot;Railway and Mass Transportation&quot;, &quot;Industrial&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Industry from Lead form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derived_Industry__c</fullName>
        <description>Takes the customer industry either from the lead entry form or from the contact&apos;s account)</description>
        <formula>IF(
 ContactId =&quot;&quot;,  Customer_Industry_from_Lead_form__c  , Customer_Industry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derived Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <description>Energy Record Id</description>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_NPS_OPT_OUT_link__c</fullName>
        <formula>HYPERLINK(&quot;http://crm.te.com/apex/ctrlnpsoptoutpage?id=&quot; &amp;   Id   , &quot;NPS OPT OUT&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External NPS OPT OUT link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_NPS_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://crm.te.com/?id=&quot; &amp; Id, &quot;NPS Survey&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External NPS Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Follow_up_to_Contact_Owner__c</fullName>
        <formula>Campaign.First_Follow_Up_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Follow up to Contact Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Contact_Owner_Date__c</fullName>
        <formula>Campaign.First_Reminder_Contact_Owner_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reminder Contact Owner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Customer_Date__c</fullName>
        <formula>Campaign.First_Reminder_Customer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reminder Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Responded_Date__c</fullName>
        <description>To expose the First Responded Date on layout list views</description>
        <formula>FirstRespondedDate</formula>
        <label>First Responded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Status__c</fullName>
        <formula>Lead.TEMarketing__Stage__c &amp; Text(Contact.TEMarketing__Inquiry_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_NPS_OPT_OUT_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ctrlnpsoptoutpage?id=&quot; &amp; Id, &quot;NPS OPT OUT&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal NPS OPT OUT Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_NPS_Survey_Link__c</fullName>
        <description>This formula field defines the hyperlink to the NPS Survey to start for a SFDC User.</description>
        <formula>HYPERLINK(&quot;/apex/ctrlTakeSurvey?id=&quot; &amp; Id, &quot;NPS Survey&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal NPS Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japan_External_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://crm.te.com?id=&quot; &amp;Id, &quot;NPS 顧客意見調査&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Japan External Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Korean_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://crm.te.com?id=&quot; &amp; Id , &quot;NPS고객측량&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Korean Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner_GIBU__c</fullName>
        <formula>TExt(Contact_Owner__r.GIBU__c) &amp;  TEXT(Lead.Owner:User.GIBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead / Contact Owner GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner__c</fullName>
        <formula>Contact_Owner__r.FirstName &amp; &quot; &quot; &amp;  Contact_Owner__r.LastName &amp;  Lead.Owner:User.FirstName  &amp; &quot; &quot; &amp; Lead.Owner:User.LastName &amp; Lead.Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead / Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Salutation__c</fullName>
        <formula>Contact.ITBsalutations__Letter_Salutation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Report__c</fullName>
        <formula>IF(
	AND(
		$Organization.Id = &quot;00Dc0000001KXGR&quot;, 
		Customer_Industry__c &lt;&gt; &quot;Appliances&quot;
	), 
	HYPERLINK(&quot;https://c2s--qa.cs14.my.salesforce.com/00OE0000001qwYR&quot;, &quot;Link to Report&quot;),
		IF(
			AND(
				$Organization.Id = &quot;00Dc0000001KXGR&quot;, 
				Customer_Industry__c = &quot;Appliances&quot;
			), 
			HYPERLINK(&quot;https://c2s--qa.cs14.my.salesforce.com/00OE00000027C5X&quot;, &quot;Link to Report&quot;),
				IF(
					AND(
						$Organization.Id = &quot;00D4C0000008brT&quot;, 
						Customer_Industry__c &lt;&gt; &quot;Appliances&quot;
					),
					HYPERLINK(&quot;https://c2s.my.salesforce.com/00OE0000001qwYR&quot;, &quot;Link to Report&quot;),
					HYPERLINK(&quot;https://c2s.my.salesforce.com/00OE00000027C5X&quot;, &quot;Link to Report&quot;)
				)
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <description>MQL Date from the related MQL</description>
        <formula>TEMarketing__MQLRecord__r.TEMarketing__MQL_Date__c</formula>
        <inlineHelpText>MQL Date from the related MQL</inlineHelpText>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <description>Member type exposed for custom reporting</description>
        <formula>IF(ISBLANK( ContactId ), &apos;Lead&apos;, &apos;Contact&apos;)</formula>
        <inlineHelpText>Member type exposed for custom reporting</inlineHelpText>
        <label>Member Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_First_Follow_Up_Date__c</fullName>
        <formula>Campaign.First_Follow_Up_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS First Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Language__c</fullName>
        <label>NPS Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_OPT_OUT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS OPT OUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Second_Follow_Up_Date__c</fullName>
        <formula>Campaign.Second_Follow_Up_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Second Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Cycle__c</fullName>
        <label>NPS Survey Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>IF(
AND(
 Lead.Owner:User.Id=&quot;&quot; ,  Contact_Owner__r.Id=&quot;&quot; ) ,  Lead.Owner:Queue.QueueName , &quot;Sales&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Country__c</fullName>
        <formula>Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualtrics Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Schedule_Date__c</fullName>
        <label>Qualtrics Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Schedule_Reminder1__c</fullName>
        <label>Qualtrics Schedule Reminder1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Schedule_Reminder2__c</fullName>
        <label>Qualtrics Schedule Reminder2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualtrics Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Count__c</fullName>
        <formula>IF(ISPICKVAL(Status, &quot;Responded&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Follow_Up_to_Contact_Owner__c</fullName>
        <formula>Campaign.Second_Follow_Up_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Follow Up to Contact Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Contact_Owner_Date__c</fullName>
        <formula>Campaign.Second_Reminder_Contact_Owner_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Reminder Contact Owner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Customer_Date__c</fullName>
        <formula>Campaign.Second_Reminder_Customer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Reminder Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Simpl_Chinese_External_NPS_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://crm.te.com?id=&quot; &amp; Id, &quot;NPS 客户问卷调查&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Simpl Chinese External NPS Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Include_In_Opportunity_ROI__c</fullName>
        <formula>Campaign.TEMarketing__Include_In_Opportunity_ROI__c</formula>
        <inlineHelpText>Campaigns that have Include in Opportunity ROI unchecked will not be used to create OpportunityAttribution Records back to a campaign.</inlineHelpText>
        <label>Include In Opportunity ROI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQLRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The MQL Record that was created wholly or in part because of this campaign member.</description>
        <inlineHelpText>The MQL Record that was created wholly or in part because of this campaign member.</inlineHelpText>
        <label>MQL Record</label>
        <referenceTo>TEMarketing__MQLRecord__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQL_Date__c</fullName>
        <inlineHelpText>depricated</inlineHelpText>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQL_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MQL Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TradTrad_Chinese_External_NPS_Survey_Lin__c</fullName>
        <formula>HYPERLINK(&quot;http://crm.te.com/?id=&quot; &amp; Id, &quot;NPS 顧客問卷調查&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trad Chinese External NPS Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>